fix property value pair and white space

--- a/src/styles/buttons-links.scss
+++ b/src/styles/buttons-links.scss
@@ -3,7 +3,7 @@
 a
 {
 	color: $link-color-primary;
-	font-family: $font-weight-semi-bold;
+	font-weight: $font-weight-semi-bold;
 	text-decoration: none;
 
 	&:hover
